Mon Jul  9 14:05:42 2012  Yuki Yugui Sonoda  <yugui@google.com>

	Reverts a half of r36079. As we discussed on ruby-dev@ and IRC,
	we do not need to disclose intermediate representation of program.
	The program embedding CRuby should use rb_eval_string family.
	* include/ruby/ruby.h (ruby_opaque_t): removed.
	  (ruby_compile_main_from_file, ruby_compile_main_from_string,
	   ruby_eval_main): removed.

	* eval.c (ruby_eval_main_internal): became ruby_exec_internal() again.
	  (ruby_eval_main): removed.

	* ruby.c (PREPARE_PARSE_MAIN) reverted.
	  (parse_and_compile_main, ruby_compile_main_from_file,
	   ruby_compile_main_from_string): removed

Wed Jul 11 10:16:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby.h (HAVE_RUBY_THREAD_H): to show ruby/thread.h to be
	  available.  fixup of r36355.

Wed Jul 11 03:26:47 2012  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c:  Added streaming support to inflate processing.
	  This allows zlib streams to be processed without huge memory growth.
	  [Feature #6612]
	* NEWS:  ditto
	* ext/zlib/zlib.c (zstream_expand_buffer):  Uses rb_yield when a block
	  is given for streaming support.  Refactored to use
	  zstream_expand_buffer_into to remove duplicate code.
	* ext/zlib/zlib.c (zstream_expand_buffer_protect):  Added wrapper
	  function to pass jump state back through GVL-free section to allow
	  zstream clean-up before terminating the ruby call.
	* ext/zlib/zlib.c (zstream_expand_buffer_without_gvl):  Acquire GVL to
	  yield processed chunk of output stream.
	* ext/zlib/zlib.c (zstream_detach_buffer):  When a block is given,
	  returns Qnil mid-stream and yields the output buffer at the end of
	  the stream.
	* test/zlib/test_zlib.rb:  Updated tests

Tue Jul 10 22:57:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/thread.h: new header file for thread stuff.

	* thread.c (rb_thread_call_without_gvl): export.  [Feature#4328]
	  returns void* instead of VALUE.  [Feature #5543]
